plugins
{
  id 'java'
}


defaultTasks 'dist'

tasks.register( "dist", Copy )
        {
          from 'build/libs'
          into 'dist'

          dependsOn clean, jar
        }


java {
  toolchain {
    languageVersion.set(JavaLanguageVersion.of(17))
  }
}


repositories
{
  mavenCentral()
}

dependencies
{
  implementation fileTree('lib') {
    include '*.jar'
  }

  compileOnly 'org.apache.tomcat:tomcat-catalina:9.0.53'
}

